# llm_workspace_cli

./: .gitignore  .gitmodules  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
MEMORY/: MEMORY.md  agent-settings-env-precedence.md  claude-settings-env-precedence.md  cli-ux-interactive-and-named-flags.md  completion-positional-stages.md  design-docs-organization.md  memory-entry-conventions.md  memory-persistence-policy.md  model-ops-no-env-vars.md  overlay-habit-template.md
completions/: _llmw  llmw.bash  llmw.fish
doc/: 2026-06-27-models-registry-design.md  design.md
doc/design/: 00-overview.md  01-workspace-management.md  02-wiki-crud.md  03-wiki-enter.md  04-data-model.md  05-templates-submodule.md  08-install-uninstall.md  09-workspace-model-registry.md  10-spec-alignment-2026-07.md  README.md
doc/plans/: 2026-06-26-llmw-v1.md  2026-06-28-wiki-workspace-cli-phase1.md  2026-06-28-workspace-model-registry.md  2026-06-29-model-overlay.md
llmw/: __init__.py  __main__.py  _compat.py  cli.py  config.py  errors.py  fsutil.py
llmw/models/: __init__.py  manager.py  overlay.py  overlay_opencode.py  redact.py  resolve.py  store.py
scripts/: install-hooks.sh  install.sh  uninstall-hooks.sh
templates/: wiki_metadata.toml.template
tests/: conftest.py  test_cli.py  test_compat.py  test_e2e_smoke.py  test_errors.py  test_manifest.py  test_remove_cmd.py  test_show_cmd.py  test_wiki_rename.py  test_workspace.py
wiki_workspace/: __init__.py  __main__.py  _compat.py  cli.py  errors.py  manifest.py  workspace.py
(+19 files in other folders)
