[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-workspace"
version = "0.1.0"
description = "llmw — manage a workspace of llm-wiki-management wikis"
requires-python = ">=3.6"
license = { text = "MIT" }
dependencies = [
    "tomli >= 1.2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff"]

[project.scripts]
llmw = "wiki_workspace.cli:main"

[tool.setuptools.packages.find]
include = ["wiki_workspace*"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # 行宽交给 formatter 管，不靠 lint

[tool.pytest.ini_options]
testpaths = ["tests"]
